# open-turbopuffer

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  beads.md  docker-compose.yml  run.sh
crates/tpuf-indexer/: Cargo.toml
crates/tpuf-indexer/src/: indexer.rs  main.rs
crates/tpuf-server/: Cargo.toml
crates/tpuf-server/src/: lib.rs  main.rs
crates/tpuf-server/src/api/: mod.rs
crates/tpuf-server/src/engine/: batcher.rs  mod.rs  namespace.rs  search.rs
crates/tpuf-server/src/engine/index/: mod.rs
crates/tpuf-server/src/engine/index/spfresh/: config.rs  head_index.rs  kmeans.rs  mod.rs  posting.rs  posting_store.rs  rebuilder.rs  search.rs  updater.rs  version_map.rs
crates/tpuf-server/src/storage/: cache.rs  mod.rs
crates/tpuf-server/src/types/: mod.rs
docs/: 2026-01-27-17-27-18-002-vector-search-basic-features-phase-wise.md  2026-01-27-20-52-58-003-some-basics.md  2026-02-11-12-33-25-remixed-5255b54d.md  2026-02-12-002-indexer-integration-plan.md  2026-02-12-16-46-10-001-open-turbopuffer-v0-plan.md  2026-02-12-17-57-40-spfresh-index-plan.md  2026-02-12-s3-conditional-writes.md  2026-02-12-spfresh-integration-plan.md  2026-02-19-22-03-34-spfresh-s3-storage-design.md  2026-02-19-22-09-25-spfresh-s3-redesign.md  2026-02-26-14-32-07-spfresh-wiring-and-s3-centroids.md  2026-03-17-09-14-24-spfresh-wiring-implementation.md  2026-03-17-09-23-51-spfresh-s3-persistence.md  2026-03-17-10-02-23-s3-conditional-writes-impl.md  2026-03-17-s3-conditional-writes-impl.md  2026-03-17-spfresh-s3-persistence.md  2026-03-17-spfresh-wiring-implementation.md
(+9 files in other folders)
