[package]
name = "tpuf-indexer"
version = "0.1.0"
edition = "2021"

[dependencies]
tpuf-server = { path = "../tpuf-server" }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"

[dev-dependencies]
tpuf-server = { path = "../tpuf-server", features = ["test-utils"] }
rand = "0.8"
