[package]
name = "tpuf-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"
zstd = "0.13"
opendal = { version = "0.51", features = ["services-s3"] }
moka = { version = "0.12", features = ["future"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
bytes = "1"
anyhow = "1"

[dev-dependencies]
rand = "0.8"
